edit backtotop and size COPYRIGHT

--- a/what_we_do.html
+++ b/what_we_do.html
@@ -140,7 +140,7 @@
         </div>
       </div>
     </div>
-    <a id="backtotop" href="#carousel-example-1z" class="btn-backtotop btn z-depth-3">
+    <a id="backtotop" href="#carousel-example-1z" class="btn-backtotop">
       <img src="./images/backtotop.png" />
     </a>
     <main>
@@ -587,9 +587,9 @@
           <div
             class="col-12 col-lg-5 text-center text-lg-left py-2 div-left-footer"
           >
-            <h4 class="text-uppercase">
+            <p class="text-uppercase">
               COPYRIGHT © 2019 MEETING ROOM CO.,LTD.
-            </h4>
+            </p>
           </div>
           <div
             class="col-12 col-lg-7 text-center text-lg-left py-2 div-right-footer"
