--- a/contact_us.html
+++ b/contact_us.html
@@ -263,9 +263,9 @@
           <div
             class="col-12 col-lg-5 text-center text-lg-left py-2 div-left-footer"
           >
-            <h4 class="text-uppercase">
+            <p class="text-uppercase">
               COPYRIGHT © 2019 MEETING ROOM CO.,LTD.
-            </h4>
+            </p>
           </div>
           <div
             class="col-12 col-lg-7 text-center text-lg-left py-2 div-right-footer"
